working on freind module
